jupyter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bdiviz-demo
  labels:
    app: bdiviz-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bdiviz-demo
  template:
    metadata:
      labels:
        app: bdiviz-demo
    spec:
      containers:
      - name: bdiviz-demo-container
        image: edenwu/bdi-viz:amd64
        ports:
        - containerPort: 8888
---
apiVersion: v1
kind: Service
metadata:
  name: bdiviz-demo
  labels:
    app: bdiviz-demo
spec:
  type: ClusterIP
  selector:
    app: bdiviz-demo
  ports:
  - name: web
    protocol: TCP
    port: 8888
    targetPort: 8888
